Alignment fixes
Names now resize correctly and don't move up/down when resized.

Match/Set scores numbers are now centered.

Loading is centered correctly.

--- a/1_Singles/layout.css
+++ b/1_Singles/layout.css
@@ -280,7 +280,7 @@ body {
 	right: 550px;
 	opacity: 1;
 	height: 50px;
-	width: 650px;
+	width: 1335px;
 	text-align: left;
 	color: #FFFFFF;
     text-shadow: 
